Updated profiles and minor changes
- about page: 2 new pics, updated links
- credits and home page: changed title

--- a/about.html
+++ b/about.html
@@ -163,14 +163,14 @@
         <div class="officers section">
             <h2 class="subtitles white">Officers</h2>
             <div class="column1">
-                <img class = "portrait1" src = "images/NoPicture.jpg">
+                <img class = "portrait1" src = "images/SimonHu.jpg">
                 <div class="description1">
                     <h3 class="names"><mark class="officer"> Simon Hu&nbsp;</mark></h3>
                     <div class="logos">
                         <h5 class="position">President</h5>
-                        <a class="LinkedinLogo fab fa-linkedin icon" href="https://www.linkedin.com/" target="_blank">
+                        <a class="LinkedinLogo fab fa-linkedin icon" href="https://www.linkedin.com/in/simon-hu-6542b7206/" target="_blank">
                         </a>
-                        <a class="GitHub fab fa-github icon" href="https://github.com/" target="_blank">            
+                        <a class="GitHub fab fa-github icon" href="https://github.com/sim0n-hu/" target="_blank">            
                         </a>
                     </div>
                     <h4 class="PersonDescription white">Simon Hu is the senior at River Hill and has been a member of the club since his freshman year. Simon started programming in High School and has since learned Python, Java, Javascript, HTML, CSS and react. In his free time, Simon enjoys going on Tik Tok. He also likes to watch movies and TV shows. In particular, Simon enjoys watching Marvel movies. His favorite superhero is Wanda Maximoff. Simon’s favorite TV show is Agents of Shield. Outside of school Simon is a competitive swimmer. Simon has been swimming since he was eight years old. He hopes to get a scholarship for swimming and swim varsity in college.</h4>
@@ -228,9 +228,7 @@
                     <h3 class="names"><mark class="officer"> Sheryl Li&nbsp;</mark></h3>
                     <div class="logos">
                         <h5 class="position">Secretary</h5>
-                        <a class="LinkedinLogo fab fa-linkedin icon" href="https://www.linkedin.com/" target="_blank">
-                        </a>
-                        <a class="GitHub fab fa-github icon" href="https://github.com/" target="_blank">            
+                        <a class="GitHub fab fa-github icon" href="https://github.com/sheryylli/" target="_blank">            
                         </a>
                     </div>
                     <h4 class="PersonDescription white">Sheryl Li is a sophomore at River Hill and joined programming club last year.</h4>
@@ -258,7 +256,7 @@
                 </div>
             </div>
             <div class="column2">
-                <img class = "portrait2" src = "images/NoPicture.jpg">
+                <img class = "portrait2" src = "images/SimonHu.jpg">
                 <div class="description2">
                     <h3 class="names"><mark class="developer"> Simon Hu&nbsp;</mark></h3>
                     <div class="logos">
@@ -357,7 +355,7 @@
                 </div>
             </div>
             <div class="column1">
-                <img class = "portrait1" src = "images/NoPicture.jpg">
+                <img class = "portrait1" src = "images/ShaunakMarathe.jpg">
                 <div class="description1">
                     <h3 class="names"><mark class="developer"> Shaunak Marathe&nbsp;</mark></h3>
                     <div class="logos">
