--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="column1">
-                <img class = "portrait1" src = "images/NoPicture.jpg">
+                <img class = "portrait1" src = "images/SherylLi.png">
                 <div class="description1">
                     <h3 class="names"><mark class="officer"> Sheryl Li&nbsp;</mark></h3>
                     <div class="logos">
@@ -270,7 +270,7 @@
                 </div>
             </div>
             <div class="column1">
-                <img class = "portrait1" src = "images/NoPicture.jpg">
+                <img class = "portrait1" src = "images/SherylLi.png">
                 <div class="description1">
                     <h3 class="names"><mark class="developer"> Sheryl Li&nbsp;</mark></h3>
                     <div class="logos">
