--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <div class="events-wrapper">
                         <div class="events">
                             <ol>
-                                <li><a href="#0" data-date="17/09/2021" class="selected white">17 Sep</a></li>
+                                <li><a href="#0" data-date="22/09/2021" class="selected white">22 Sep</a></li>
                                 <li><a href="#0" data-date="24/09/2021" class="white">24 Sep</a></li>
                                 <li><a href="#0" data-date="08/10/2021" class="white">08 Oct</a></li>
                                 <li><a href="#0" data-date="22/10/2021" class="white">22 Oct</a></li>
@@ -83,9 +83,9 @@
                     <ol>
                         <li class="selected" data-date="16/07/2021">
                             <h2 class="time">Interest Meeting</h2>
-                            <em>September 17, 2021</em>
+                            <em>September 22, 2021</em>
                             <p class="time">	
-                                Come join us for our interest meeting in Room 245 to learn more about what we do and to meet our officers. We look forward to seeing you there!
+                                Come join us during Hawktime for our interest meeting in Room 245 to learn more about what we do and to meet our officers. We look forward to seeing you there!
                             </p>
                         </li>
                         <li data-date="24/09/2021">
