--- a/competitions.html
+++ b/competitions.html
@@ -79,7 +79,7 @@
                 <p class="list white">&#129353; University of Maryland HSPC: 3rd place</p>
                 <p class="list white">&#129352; Philadelphia Classic: 2nd place</p>
                 <p class="list white">&#129351; Colorado School of Mines HSPC: 1st and 3rd place</p>
-                <p class="list white">🏅 Montgomery Blaire Informatics Tournament: 4th place</p>
+                <p class="list white">🏅 Montgomery Blair Informatics Tournament: 4th place</p>
                 <p class="list white">🏅 Florida HS Programming Series: 5th place</p>
             </div>
         </div>
