--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="section whitebackground fleft" id="intro">
             <div id="introslide">
                 <h2 class="intro">Welcome to RHHS Programming Club</h2>
-                <h4 class="intro">We are the programming club at River Hill. We do programming projects and participate in programming competitions.</h4>
+                <h4 class="intro">Join us afterschool on Thursdays in Room 245! We do programming projects and participate in programming competitions.</h4>
                 <br>
                 <p class="intro">
                 </p>
@@ -69,8 +69,8 @@
                 <h2 class="events">Upcoming Events</h2>
                 <div class="column">
                     <div class="event" id="event1">
-                        <h4 class="event right">September 17 - Interest Meeting</h4>
-                        <p class="event right">Come join us in Room 245 (Mr. Boothe's room) to learn more about what we do and the opportunities we offer!</p>
+                        <h4 class="event right">September 22 and 23 - Interest Meeting</h4>
+                        <p class="event right">Come join us during Hawktime or afterschool on Thursday in Room 245 (Mr. Boothe's room) to learn more about what we do and the opportunities we offer!</p>
                     </div>
                     <div class="event" id="event3">
                         <h4 class="event right">December 18 - USACO</h4>
@@ -79,12 +79,11 @@
                 </div>
                 <div class="vl"></div>
                 <div class="circle" id="dot1"></div>
-                <!--                <span class="dot" id="dot1"></span>-->
                 <div class="circle" id="dot2"></div>
                 <div class="circle" id="dot3"></div>
                 <div class="event" id="event2">
-                    <h4 class="event left">November 12 - Random Coding Competition</h4>
-                    <p class="event left">Random Coding Competition is a chance for you to work in teams to solve programming problems. Talk or DM Rayhan Zirvi on Discord to join.</p>
+                    <h4 class="event left">October 21 - Project Walkthrough</h4>
+                    <p class="event left">We are going to introduce the projects for this year and how you can participate. Attend this meeting to learn more!</p>
                 </div>
             </div>
         </div>
